update ctp adaptor